# pangolin

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
src/: get_resources.cpp  get_resources.hpp  main.cpp
src/connections/: connect.cpp  connect.hpp
